# crosswind

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.sh
.github/workflows/: ci.yml  release.yml
proto/: flights.proto
scripts/release/: build.sh  package.sh
site/: package-lock.json  package.json  styles.css  vocs.config.ts
site/pages/: index.mdx
site/pages/introduction/: getting-started.mdx  installation.mdx
site/pages/reference/: agent-integration.mdx  exit-codes.mdx  limitations.mdx  output.mdx
site/pages/usage/: dates.mdx  filters.mdx  multi-destination.mdx  searching.mdx
site/sidebar/: sidebar.ts
src/: date.rs  error.rs  fetch.rs  lib.rs  main.rs  model.rs  output.rs  parse.rs  query.rs
