[package]
name = "crosswind"
version = "0.2.2"
edition = "2024"
license = "MIT"
description = "Google Flights CLI. Search flights from the terminal."
rust-version = "1.88"

[dependencies]
wreq = { version = "6.0.0-rc.28", features = ["cookies"] }
wreq-util = "3.0.0-rc.6"
prost = "0.13"
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
open = "5"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
strip = true
panic = "abort"
